<?xml version="1.0"?>
<package format="2">
  <name>estimationState</name>
  <version>1.0.0</version>
  <description>estimationState node</description>
  <maintainer email="tairanchen@bitfsd.cn">chentairan</maintainer>
  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>

  <!--For custom message import-->

  <!--Other depends-->
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>fsd_common_msgs</depend>
  <depend>coordSystem</depend>

  <export>
  </export>
</package>
